# git-workbench

./: .gitignore  .oxlintrc.json  README.md  commitlint.config.cjs  components.json  package.json  tsconfig.node.json  vite.config.ts
docs/: roadmap.md
docs/superpowers/plans/: 2026-05-14-git-workbench-foundation.md  2026-05-16-company-setup-profiles.md  2026-05-16-conflict-recovery.md  2026-05-16-history-graph-filters.md  2026-05-16-history-graph.md  2026-05-16-hunk-staging.md  2026-05-16-keyboard-first-navigation.md  2026-05-16-multi-repository-workspace.md  2026-05-16-operation-previews.md  2026-05-16-operation-queue.md  2026-05-16-pr-mr-review.md  2026-05-16-provider-accounts.md  2026-05-16-provider-detection.md  2026-05-16-provider-work-item-details.md  2026-05-16-provider-work-items.md  2026-05-16-pull-push-previews.md  2026-05-16-repository-health-panel.md  2026-05-16-smart-commit-groups.md  2026-05-16-workspace-batch-operations.md
docs/superpowers/specs/: 2026-05-14-git-workbench-design.md  2026-05-14-shadcn-generated-info.md  2026-05-16-company-setup-profiles-design.md  2026-05-16-keyboard-first-navigation-design.md  (+5 more)
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  operation_error.rs  provider_accounts.rs  provider_reviews.rs  provider_work_items.rs
src-tauri/src/git/: branch.rs  command.rs  conflict.rs  history.rs  mod.rs  operation_preview.rs  operation_stream.rs  operations.rs  provider.rs  stash.rs  status.rs
src/app/: App.test.tsx  App.tsx  workbench-data.ts
(+43 files in other folders)
