[package]
name = "git-workbench"
version = "0.1.0"
description = "A cross-platform Git workbench"
authors = ["Michał Miłek"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "git_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }
tauri-plugin-dialog = "2"
